tests/compile_failure/src/Utility/Integer.unsigned_unary_minus.fail.cpp
#include <Phi/Utility/Integer.hpp>

int main()
{
    phi::Integer<unsigned> i{7u};

    auto val = -i;
}
